--- a/docs/utilisation_terres.rmd
+++ b/docs/utilisation_terres.rmd
@@ -4,11 +4,12 @@ subtitle: "Exploration des données"
 output:
   html_document:
     toc: true
-    number_sections: false
+    number_sections: true
     toc_float: true
 ---
 
 ```{r param, include = F}
+knitr::opts_chunk$set(message = FALSE)
 # Output figure in HTML5
 if (knitr::is_html_output()) {
     knitr::knit_hooks$set(
@@ -35,7 +36,7 @@ library(ggplot2)
 # synth <- readRDS("C:/Users/ccjuhasz/Desktop/SMAC/Projet_publi/6-PNB_isotopes/DATA/GitHub_Pages/ISOSCAPE_synthese_par_ind.rds")
 ```
 
-## Mise en contexte  
+# Mise en contexte  
 
 **Définition** 
 
@@ -45,40 +46,41 @@ library(ggplot2)
 
 **Cible 1** - Veiller à ce que toutes les zones fassent l'objet d'une planification spatiale participative, intégrée et respectueuse de la biodiversité et/ou soient gérées efficacement dans le cadre de processus de changement d'affectation des terres et des mers. 
 
-## Méthodologie  
+# Méthodologie  
 
-### Résumé méthodologique 
+## Résumé méthodologique 
 
 Somme des superficies par classe d’utilisation des terres au 5 ans, de 2000 à 2020. Les superficies seront rapportées à la surface totale du Québec se situant sous le 60éme parallèle afin d’obtenir une proportion.  
 Un traitement spécial sera fait pour obtenir une classification des milieux humides la plus inclusive possible en agrégant les types de forêts humides et terres humides en une catégorie unique.  
 
-### Type de méthodologie 
+## Type de méthodologie 
 
 Valeur exacte rapportée 
 
-### Limitations 
+## Limitations 
 
 - Données disponibles uniquement sous le 60e parallèle 
 - Création de nouvelles classes d’utilisation des terres au cours de la série temporelle – Les nouvelles classes seront retirées lors du calcul de l’indicateur 
 - Sous-divisions manquantes pour certaines classes - par exemple, pas de sous-divisions par type de forêts pour la classe forêts. 
 - En général, dissocier les erreurs de classification dans les 
 
-### Incertitude 
+## Incertitude 
 
 Aucune à rapporter 
   
-## Données accessibles
+# Données accessibles
 
 |                         Type de données requises                          |                                                                                                                                     Source                                                                                                                                      |
 |:-------------------------------------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
-| Utilisation du territoire                                                 | Données Québec [[lien]](https://www.donneesquebec.ca/recherche/dataset/utilisation-du-territoire)                                                                                                                                                                                                                                                           |
-| Cartographie de l’occupation des sols des Basses-Terres du Saint-Laurent  | Données Québec [[lien]](https://www.donneesquebec.ca/recherche/dataset/cartographie-de-l-occupation-du-sol-des-basses-terres-du-saint-laurent)                                                                                                                                                                                                                                                           |
-| Utilisation des terres                                                    | Agriculture et Agroalimentaire Canada, 2021,  « Séries chronologiques d’utilisation des terres d’AAC : 2000, 2005, 2010, 2015, 2020 », Division de l’agroclimat, de la géomatique et de l’observation de la Terre, Direction générale des sciences et de la technologie [[lien]](https://ouvert.canada.ca/data/fr/dataset/fa84a70f-03ad-4946-b0f8-a3b481dd5248)  |
-| 2010, 2015, 2020 Land cover Canada                                        | Canada Center for Remote Sensing [[lien]](https://open.canada.ca/data/en/dataset/ee1580ab-a23d-4f86-a09b-79763677eb47)                                                                                                                                                                                                                                         |
+| Utilisation du territoire                                                 | Données Québec [lien](https://www.donneesquebec.ca/recherche/dataset/utilisation-du-territoire)                                                                                                                                                                                                                                                           |
+| Cartographie de l’occupation des sols des Basses-Terres du Saint-Laurent  | Données Québec [lien](https://www.donneesquebec.ca/recherche/dataset/cartographie-de-l-occupation-du-sol-des-basses-terres-du-saint-laurent)                                                                                                                                                                                                                                                           |
+| Utilisation des terres                                                    | Agriculture et Agroalimentaire Canada, 2021,  « Séries chronologiques d’utilisation des terres d’AAC : 2000, 2005, 2010, 2015, 2020 », Division de l’agroclimat, de la géomatique et de l’observation de la Terre, Direction générale des sciences et de la technologie [lien](https://ouvert.canada.ca/data/fr/dataset/fa84a70f-03ad-4946-b0f8-a3b481dd5248)  |
+| 2010, 2015, 2020 Land cover Canada                                        | Canada Center for Remote Sensing [lien](https://open.canada.ca/data/en/dataset/ee1580ab-a23d-4f86-a09b-79763677eb47)                                                                                                                                                                                                                                         |
 
-## Description des données  
+# Description des données  
 
-### Utilisation du territoire par Données Québec  
+## Utilisation du territoire par Données Québec  
+### Description
 
 Ces données ont été produites pour répondre au besoin du MELCC afin de remplir leurs mandats de conservation et de suivi de l’état de l’environnement. Il s’agit d’un assemblage de plusieurs sources de données (21 sources pour la dernière version) dont la précision et la représentativité peuvent fluctuer en fonction des régions.  
 
@@ -87,8 +89,50 @@ Ces données ont été produites pour répondre au besoin du MELCC afin de rempl
 |-----------------|----------------------------------------------|--------------------------------------------|
 | Couverture      | 2012-2020 (Québec complet à partir de 2013)  | Québec                                     |
 | Résolution      | 1 an                                         | 30 x 30 m puis 10 x 10 m à partir de 2019  |
+
+### Traitement des catégories 
+```{r data_treat_melccfp, include = FALSE}
+df <- data.frame()
+for (y in c(2012:2014, 2016, 2018:2019)) {
+    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/MELCCFP/MELCCFP_pix_per_land_type_", y, "_version2.txt"))
+    df <- rbind(df, t)
+}
+df$area_km2 <- df$area / 1000000
+
+# traitement des doublons
+df$land_type[df$land_type %in% c("Coupe et regénération", "Coupe et régénération")] <- "Coupes et régénérations"
+df$land_type[df$land_type %in% c("Sol nu et lande", "Sol nus et landes")] <- "Sols nus et landes"
+
+cat <- data.frame(categories = unique(df$land_type))
+cat$use <- c("non", rep("oui", 6), "non", "oui")
+```
+```{r MELCCFP_cat, echo = FALSE}
+kable(cat,
+    caption = "Tab. x. Choix des catégories utilisées pour l'analyse",
+    row.names = FALSE
+)
+```
+```{r MELCCFP_viz, echo = FALSE}
+# retrait des categories non souhaitees
+df2 <- df[!df$land_type %in% c(NA, "Non classifié"), ]
+df3 <- df2 |>
+    group_by(year, land_type) |>
+    summarise(area_km2 = sum(area_km2))
+
+p <- ggplot(data = df3, aes(x = year, y = area_km2, color = land_type)) +
+    geom_line(linewidth = 1)
+```
+### Visualisation
+
+```{r MELCCFP_plot, echo = FALSE}
+print(p)
+```
+
+### Limitations
+- Manque informations pour les années 2015, 2017 - Contact pris avec le responsable des données
+- changement de méthodologie (définition de catégories) et de résolution des cartes au cours du temps
  
-### Cartographie de l’occupation des sols des Basses-Terres du Saint-Laurent par Données Québec 
+## Cartographie de l’occupation des sols des Basses-Terres du Saint-Laurent par Données Québec 
 
 Ce jeu de données représente l’état des milieux naturels en 2014 ou à une date plus récente (mise à jour le 26 juin 2023) et a été produit dans le cadre du Plan d’action Saint-Laurent pour l’élaboration d’un plan intégré de conservation des milieux naturels et de la biodiversité. L’unité minimale des polygones utilisés est de 0.5 ha. La base de données représente le fruit de l’agrégation et du traitement (dont de la photo-interprétation) de données issues de plusieurs sources : base de données des cultures assurées (Financière agricole du Québec), base de données topographiques du Québec, cadre de référence hydrographique du Québec (MDDELCC), cartographie des cultures au Canada (Agriculture et Agroalimentaire Canada), cartographie détaillée des milieux humides (CIC et MDDELCC), réseau hydrographique national (Ressources naturelles Canada), système d’information écoforestière (MRNF) et système de référence linéaire (Transport Québec). 
 
@@ -97,7 +141,12 @@ Ce jeu de données représente l’état des milieux naturels en 2014 ou à une 
 | Couverture      | 2014        | Basses-Terres du Saint-Laurent  |
 | Résolution      | ponctuelle  | -                               |  
 
-### Utilisation des terres par Agriculture et Agroalimentaire Canada  
+### Limitations
+
+Ne couvre que les basses-terres du Saint-Laurent et n'est représentatif que pour 2014
+
+## Utilisation des terres par Agriculture et Agroalimentaire Canada  
+### Description
 
 Les données d’utilisation des terres sont des données cartographiques de haute précision et de haute résolution fournies par Agriculture et Agroalimentaire Canada. Ces données sont divisées en 7 classes principales : forêts, lieux habités, terres cultivées, prairies, terres humides, eaux et autres terres. Ces classes sont définies suivant le protocole du Groupe d’experts intergouvernemental sur l’évolution du climat (GIEC). Chacune des classes du GIEC possèdent d'une à 11 sous-classes. Une spécification complète du contenu des données est accessible au lien suivant [AAC, 2018]. Les données sont divisées par zone UTM et projetées en WGS84.  
 
@@ -106,11 +155,11 @@ Les données d’utilisation des terres sont des données cartographiques de hau
 | Couverture      | 2000-2020   | Canada < 60e parallèle  |
 | Résolution      | 5 ans       | 30m                     |
 
-#### Traitement des catégories 
+### Traitement des catégories 
 ```{r data_treat_AAC, include = FALSE}
 df <- data.frame()
 for (y in seq(2000, 2020, 5)) {
-    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/final_pix_per_land_type_", y, "_6623_projection.txt"))
+    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/AAC/AAC_final_pix_per_land_type_", y, "_6623_projection.txt"))
     df <- rbind(df, t)
 }
 
@@ -190,11 +239,17 @@ df_sum$area <- (df_sum$sum * 30 * 30) / 1000000
 p <- ggplot(data = df_sum, aes(x = year, y = area, color = class)) +
     geom_line(linewidth = 1)
 ```
+
+
+### Visualisation
+
 ```{r AAC_plot, echo = FALSE}
 print(p)
 ```
 
-### Couverture terrestre par Centre Canadien de Télédétection  
+Cf indicateur par régions  
+
+## Couverture terrestre par Centre Canadien de Télédétection  
 
 Ce jeu de données, à l’échelle du Canada, est produit à partir des observations des capteurs Landsat Operational Land Imager, avec une exactitude de 86.9% sans disparité spatiale marquée.  
 
@@ -202,3 +257,43 @@ Ce jeu de données, à l’échelle du Canada, est produit à partir des observa
 |-----------------|-------------|-------------------------------|
 | Couverture      | 2010-2020   | Canada, Etats-Unis & Mexique  |
 | Résolution      | 5 ans       | 30m                           |
+
+### Traitement des catégories
+
+| pixel_id | class                                                  | use | category    |
+|----------|--------------------------------------------------------|-----|-------------|
+| 1        | Forêt de conifères tempérée ou subpolaire              | oui | forest      |
+| 2        | Forêt de conifères (taiga) ou subpolaire               | oui | forest      |
+| 5        | Forêt feuillue tempérée ou subpolaire                  | oui | forest      |
+| 6        | Forêt mixte                                            | oui | forest      |
+| 8        | Arbustaie tempérée ou subpolaire                       | oui | shrubland   |
+| 10       | Prairie tempérée ou subpolaire                         | oui | grassland   |
+| 11       | Arbustaie à lichens et à mousses polaire ou subpolaire | oui | shrubland   |
+| 12       | Prairie à lichens et à mousses polaire ou subpolaire   | oui | grassland   |
+| 13       | Lande à lichens et à mousses polaire ou subpolaire     | oui | moorland    |
+| 14       | Terre humide                                           | oui | wetland     |
+| 15       | Terre agricole                                         | oui | cropland    |
+| 16       | Terre stérile                                          | oui | barren_land |
+| 17       | Milieu urbain                                          | oui | urban       |
+| 18       | Eau                                                    | oui | water       |
+| 19       | Neige et glace                                         | oui | snow_ice    |
+
+### Visualisation
+
+```{r CCT_viz, include = FALSE}
+df <- read.table("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/Centre_canadien_teledetection_treat/freq_couv_territoire.txt")
+
+df2 <- df |>
+    group_by(year, cat) |>
+    summarise(tot_pix = sum(count))
+df2$area_km2 <- (df2$tot_pix * 30 * 30) / 1000000
+
+p <- ggplot(data = df2, aes(x = year, y = area_km2, color = cat)) +
+    geom_line(linewidth = 1)
+```
+```{r CCT_plot, echo = FALSE}
+print(p)
+```
+
+### Limitations
+
