--- a/docs/utilisation_terres.rmd
+++ b/docs/utilisation_terres.rmd
@@ -82,8 +82,8 @@ Ces données ont été produites pour répondre au besoin du MELCCFP afin de rem
 ### Traitement des catégories 
 ```{r data_treat_melccfp, include = FALSE}
 df <- data.frame()
-for (y in c(2012:2014, 2016, 2018:2019)) {
-    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/MELCCFP/MELCCFP_pix_per_land_type_", y, "_version2.txt"))
+for (y in c(2013, 2014, 2016, 2019, 2020)) {
+    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/MELCCFP/version_3/MELCCFP_pix_per_land_type_", y, "_version_10x10res.txt"))
     df <- rbind(df, t)
 }
 df$area_km2 <- df$area / 1000000
