--- a/docs/utilisation_terres.rmd
+++ b/docs/utilisation_terres.rmd
@@ -122,7 +122,7 @@ df3 <- df2 |>
 
 p <- ggplot(data = df3, aes(x = year, y = area_km2, color = land_type)) +
     geom_line(linewidth = 1) +
-    theme(legend.position = "none") +
+    # theme(legend.position = "none") +
     scale_x_continuous(breaks = seq(2012, 2020, by = 1)) +
     theme(axis.title.x = element_blank()) +
     scale_color_manual(values = c("chocolate4", "brown2", "deepskyblue3", "darkolivegreen", "aquamarine4"))
@@ -164,7 +164,7 @@ Les données d’utilisation des terres sont des données cartographiques de hau
 ```{r data_treat_AAC, include = FALSE}
 df <- data.frame()
 for (y in seq(2000, 2020, 5)) {
-    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/AAC/AAC_final_pix_per_land_type_", y, "_6623_projection.txt"))
+    t <- read.table(paste0("/home/local/USHERBROOKE/juhc3201/BdQc/ReseauSuivi/Data/g15_indicators/results/AAC/AAC_final_pix_per_land_type_", y, "_6623_projection.txt"))
     df <- rbind(df, t)
 }
 
@@ -269,35 +269,56 @@ df_sum11 <- left_join(df_sum, pix_tot, by = c("year"))
 df_sum11$prop <- (df_sum11$area * 100) / df_sum11$area_tot
 
 # ----- #
+# computation des valeurs relatives
+df_ls <- split(df_sum11, df_sum11$class)
+df_ls2 <- lapply(df_ls, function(x) {
+    x$comp_2000 <- x$prop - x$prop[1]
+    x
+})
+df_sum11_rel <- do.call("rbind", df_ls2)
+# ----- #
 df_sum22 <- left_join(df_sum2, pix_tot, by = c("year"))
 df_sum22$prop <- (df_sum22$area * 100) / df_sum22$area_tot
 
 p2 <- ggplot(data = df_sum11, aes(x = year, y = prop, color = class)) +
     geom_line(linewidth = 1) +
     theme(axis.title = element_blank()) +
-    scale_x_continuous(breaks = seq(200, 2020, by = 5)) +
+    scale_x_continuous(breaks = seq(2000, 2020, by = 5)) +
     theme(axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position = "none") +
+    scale_color_manual(values = c("chocolate4", "brown2", "deepskyblue3", "darkolivegreen", "aquamarine4")) +
+    ggtitle("Agriculture et Agroalimentaire Canada")
+
+p2_rel <- ggplot(data = df_sum11_rel, aes(x = year, y = comp_2000, color = class)) +
+    geom_line(linewidth = 1) +
+    theme(axis.title = element_blank()) +
+    scale_x_continuous(breaks = seq(2000, 2020, by = 5)) +
+    theme(axis.text.y = element_blank(), axis.ticks = element_blank()) +
     scale_color_manual(values = c("chocolate4", "brown2", "deepskyblue3", "darkolivegreen", "aquamarine4")) +
     ggtitle("Agriculture et Agroalimentaire Canada")
 
 p22 <- ggplot(data = df_sum22, aes(x = year, y = prop, color = class2)) +
     geom_line(linewidth = 1) +
     # theme(axis.title = element_blank()) +
-    scale_x_continuous(breaks = seq(200, 2020, by = 5)) +
+    scale_x_continuous(breaks = seq(2000, 2020, by = 5)) +
     # theme(axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position = "none") +
     scale_color_manual(values = c("chocolate4", "brown2", "deepskyblue3", "darkolivegreen", "aquamarine4")) +
     ggtitle("Agriculture et Agroalimentaire Canada")
 ```
 
-```{r AAC_viz_region}
-dt <- read.table("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/results/AAC/AAC_final_per_region_land_use.txt")
+```{r AAC_viz_region, echo = FALSE}
+dt <- read.table("/home/local/USHERBROOKE/juhc3201/BdQc/ReseauSuivi/Data/g15_indicators/results/AAC/AAC_final_per_region_land_use.txt")
 ```
 
 
 ### Visualisation
-
+#### Valeurs brutes
 ```{r AAC_plot, echo = FALSE}
 print(p2)
+```
+
+#### Valeurs relatives
+```{r AAC_rel_plot, echo = FALSE}
+print(p2_rel)
 ```
 
 **Cf indicateur par régions**  
@@ -341,7 +362,7 @@ Ce jeu de données, à l’échelle du Canada, est produit à partir des observa
 ### Visualisation
 
 ```{r CCT_viz, include = FALSE}
-df <- read.table("/home/local/USHERBROOKE/juhc3201/BDQC-GEOBON/data/g15_indicators/Centre_canadien_teledetection_treat/freq_couv_territoire.txt")
+df <- read.table("/home/local/USHERBROOKE/juhc3201/BdQc/ReseauSuivi/Data/g15_indicators/Centre_canadien_teledetection_treat/freq_couv_territoire.txt")
 
 df <- df[df$cat %in% c("forest", "wetland", "cropland", "urban", "water"), ]
 
@@ -379,10 +400,6 @@ p3_nolegend <- ggplot(data = df_sum2, aes(x = year, y = prop, color = cat)) +
     ggtitle("Centre Canadien de Télédétection") +
     theme(legend.position = "none", axis.title.x = element_blank())
 ```
-```{r CCT_plot, echo = FALSE}
-print(p3)
-```
-
 ```{r plot_comp, echo = FALSE}
 # Multiple plot function
 #
